# wgpu-tutorial

./: Cargo.toml
assets/: rectangle.model
src/: camera.rs  main.rs  model.rs  shader.wgsl  shader_alter.wgsl  texture.rs
